2024-01-24  Andreas Scherer  <https://ascherer.github.io>

	* cweave.w,
	* cwebmac.tex,
	* prod-cweave.w,
	* prod-twill.w,
	* prod.w: Changes for CWEB 4.12 (dev).

2023-12-02  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* comm-{mac,mini,ql,w2c}.ch,
	* comm-w2c.h,
	* common.h,
	* common.w,
	* ctang-{bs,pc,ql,vms,w2c,w32}.ch,
	* ctangle.c,
	* ctangle.w,
	* ctwill-w2c.ch,
	* cweav-{bs,pc,ql,vms,w2c,w32}.ch,
	* cweave.w,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* po/cweb-tl.pot,
	* po/cweb.pot,
	* po/de/cweb-tl.po,
	* po/de/cweb.po,
	* po/it/cweb.po,
	* prod-{cweave,twill}.w,
	* prod.w: CWEB 4.11 release.

2023-11-19  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-hint.ch,
	* ctwill-mini.ch,
	* ctwill-w2c.ch,
	* cweav-w2c.ch,
	* cweave.w: Make 'k_section' block-local.

2023-11-19  Andreas Scherer  <https://ascherer.github.io>

	* common.c,
	* common.w,
	* ctangle.c,
	* ctangle.w,
	* ctwill-mini.ch,
	* cweave.w: Use zero-initialisation.

2023-10-29  Andreas Scherer  <https://ascherer.github.io>

	* ctwill-proofsort,
	* ctwill.test: Make 'proofsort' like 'refsort'.

2023-10-25  Andreas Scherer  <https://ascherer.github.io>

	* cwebmac.tex,
	* texinputs/pdfctproofmac.tex,
	* texinputs/pdfctwimac.tex: Bring PDF/HINT macros together.

2023-10-18  Andreas Scherer  <https://ascherer.github.io>

	* cwebmac.tex,
	* cwebman-w2c.ch: Minor redactions in the CWEB manual and macros.

2023-10-15  Andreas Scherer  <https://ascherer.github.io>

	* cwebman-w2c.ch: Fix display in Skim and Acrobat Reader on macOS.

2023-09-30  Andreas Scherer  <https://ascherer.github.io>

	* Makefile,
	* ctwill-mini.ch,
	* cwebacromac.tex,
	* cwebmac.tex,
	* cwebman-w2c.ch,
	* cwebman.tex,
	* texinputs/dcwebmac.tex,
	* texinputs/fcwebmac.tex,
	* texinputs/icwebmac.tex,
	* texinputs/pdfctproofmac.tex,
	* texinputs/pdfctwimac.tex,
	* texinputs/pdfwebtocfront.tex: Add support for LuaTeX.

2023-09-26  Andreas Scherer  <https://ascherer.github.io>

	* cwebman-w2c.ch,