@@ -1,3 +1,7 @@
+2024-02-14  Andreas Scherer  <https://ascherer.github.io>
+
+	* cwtwill-proofsort: In-place invocation.
+
 2024-01-24  Andreas Scherer  <https://ascherer.github.io>
 
 	* cweave.w,
